--- a/OpenSpaceToolbox/Views/GameManagerMinimizedView.xaml
+++ b/OpenSpaceToolbox/Views/GameManagerMinimizedView.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:OpenSpaceToolbox"
              xmlns:dd="urn:gong-wpf-dragdrop"
+             xmlns:converters="clr-namespace:OpenSpaceCore.Converters;assembly=OpenSpaceCore"
              mc:Ignorable="d"
              d:DesignHeight="480" d:DesignWidth="280"
              d:DataContext="{d:DesignInstance local:MainViewModel}">
@@ -133,7 +134,7 @@
                    HorizontalAlignment="Left">
             <Button Content="Load"
                     Command="{Binding Path=BookmarksVm.LoadBookmarkCommand}"
-                    IsEnabled="{Binding Path=BookmarksVm.SelectedBookmarkIndex, Converter={local:IsValidIndexConverter}}"/>
+                    IsEnabled="{Binding Path=BookmarksVm.SelectedBookmarkIndex, Converter={converters:IsValidIndexConverter}}"/>
         </WrapPanel>
         <WrapPanel Grid.Row="6"
                    HorizontalAlignment="Right">
@@ -142,11 +143,11 @@
 
             <Button Content="Rename"
                     Command="{Binding Path=BookmarksVm.RenameBookmarkCommand}"
-                    IsEnabled="{Binding Path=BookmarksVm.SelectedBookmarkIndex, Converter={local:IsValidIndexConverter}}"/>
+                    IsEnabled="{Binding Path=BookmarksVm.SelectedBookmarkIndex, Converter={converters:IsValidIndexConverter}}"/>
 
             <Button Content="Delete"
                     Command="{Binding Path=BookmarksVm.DeleteBookmarkCommand}" 
-                    IsEnabled="{Binding Path=BookmarksVm.SelectedBookmarkIndex, Converter={local:IsValidIndexConverter}}"/>
+                    IsEnabled="{Binding Path=BookmarksVm.SelectedBookmarkIndex, Converter={converters:IsValidIndexConverter}}"/>
 
         </WrapPanel>
 
