--- a/OpenSpaceToolbox/Views/GameManagerFullView.xaml
+++ b/OpenSpaceToolbox/Views/GameManagerFullView.xaml
@@ -8,19 +8,24 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="640"
              d:DataContext="{d:DesignInstance local:MainViewModel}">
-    <UserControl.Resources>
-        <Style TargetType="{x:Type Button}" BasedOn="{StaticResource {x:Type Button}}">
-            <Setter Property="Padding" Value="5 2" />
-        </Style>
-    </UserControl.Resources>
 
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition MinWidth="150" />
+            <ColumnDefinition Width="3" />
+            <ColumnDefinition MinWidth="150" />
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        
-        <Menu Grid.Row="0">
+
+        <Menu Grid.Column="0" Grid.Row="0"
+              Grid.ColumnSpan="3"
+              Style="{StaticResource MenuBar}"
+              ItemContainerStyle="{StaticResource MenuBarItem}">
+
             <MenuItem Header="File">
                 <MenuItem Header="Exit"
                           InputGestureText="Alt+F4"
@@ -28,61 +33,55 @@
             </MenuItem>
 
             <MenuItem Header="Extras" ItemsSource="{Binding GameManager.ExtraActions}">
+                
                 <MenuItem.ItemContainerStyle>
                     <Style TargetType="{x:Type MenuItem}">
                         <Setter Property="Command" Value="{Binding ExecuteActionCommand}" />
                     </Style>
                 </MenuItem.ItemContainerStyle>
+                
                 <MenuItem.ItemTemplate>
                     <HierarchicalDataTemplate DataType="{x:Type local:ExtraAction}">
                         <TextBlock Text="{Binding Name}"></TextBlock>
                     </HierarchicalDataTemplate>
                 </MenuItem.ItemTemplate>
+
             </MenuItem>
 
             <MenuItem Header="Settings">
+                
                 <MenuItem Header="Enable hotkeys"
                           IsCheckable="True"
                           IsChecked="{Binding Path=HotkeysEnabled}"
                           ToolTip="{Binding Path=HotkeysToggleTooltip}" />
+                
                 <MenuItem Header="Minimized UI"
-                          Command="{Binding Path=ToggleMinimizedUiCommand}"></MenuItem>
+                          Command="{Binding Path=ToggleMinimizedUiCommand}">
+
+                </MenuItem>
+
             </MenuItem>
 
         </Menu>
 
-        <Grid Grid.Row="1"
-              Grid.IsSharedSizeScope="True">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition MinWidth="50" />
-                <ColumnDefinition Width="5" />
-                <ColumnDefinition MinWidth="50"/>
-            </Grid.ColumnDefinitions>
-
-            <Grid Grid.Column="0"
-                  Margin="10">
+        <GroupBox Grid.Column="0" Grid.Row="1"
+                  Margin="5 0"
+                  Padding="3"
+                  Header="Levels">
+            <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
                     <RowDefinition Height="*" />
-                    <RowDefinition Height="Auto" 
-                                   SharedSizeGroup="Bottom"/>
+                    <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
 
-                <TextBlock Grid.Row="0"
-                           Text="Levels"
-                           HorizontalAlignment="Center"
-                           FontWeight="Bold"
-                           FontSize="14" />
-
-                <TreeView Grid.Row="1"
-                          ItemsSource="{Binding Path=GameManager.LevelContainers, Mode=OneTime}"
-                          VerticalAlignment="Stretch"
-                          Margin="0 10">
+                <TreeView Grid.Row="0"
+                          ItemsSource="{Binding GameManager.LevelContainers, Mode=OneTime}"
+                          VerticalAlignment="Stretch">
 
                     <TreeView.ItemTemplate>
-                        <HierarchicalDataTemplate ItemsSource="{Binding Path=Levels, Mode=OneTime}">
-                            <TextBlock Text="{Binding Path=Name, Mode=OneTime}" 
-                                       TextWrapping="WrapWithOverflow"/>
+                        <HierarchicalDataTemplate ItemsSource="{Binding Levels, Mode=OneTime}">
+                            <TextBlock Text="{Binding Name, Mode=OneTime}"
+                                       TextWrapping="WrapWithOverflow" />
                         </HierarchicalDataTemplate>
                     </TreeView.ItemTemplate>
 
@@ -94,142 +93,166 @@
 
                 </TreeView>
 
-                <StackPanel Grid.Row="2">
+                <WrapPanel Grid.Row="1"
+                           Margin="0 5 0 -3">
 
-                    <WrapPanel Orientation="Horizontal"
-                               Margin="0 5">
+                    <Button Content="Reload"
+                            Command="{Binding GameManagerVm.ReloadLevelCommand}"
+                            Margin="0 0 3 3" />
 
-                        <Button Content="Reload level"
-                                Command="{Binding Path=GameManagerVm.ReloadLevelCommand}"
-                                Margin="0 0 10 0"/>
+                    <Button Content="Random"
+                            Margin="0 0 0 3"
+                            Command="{Binding GameManagerVm.LoadRandomLevelCommand}" />
 
-                        <Button Content="Random level"
-                                Command="{Binding Path=GameManagerVm.LoadRandomLevelCommand}"/>
+                </WrapPanel>
 
-                    </WrapPanel>
+            </Grid>
+        </GroupBox>
 
-                    <StackPanel Orientation="Horizontal"
-                                Margin="0 5">
+        <GroupBox Grid.Column="0" Grid.Row="2"
+                  Margin="5 0 5 5"
+                  Padding="3"
+                  Header="Position">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
 
-                        <StackPanel>
+                <StackPanel Grid.Column="0"
+                            VerticalAlignment="Center">
 
-                            <Button Content="Save pos"
-                                    Command="{Binding Path=GameManagerVm.SavePositionCommand}"
-                                    Margin="0 0 0 5"/>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="X: " />
+                        <TextBlock Text="{Binding Path=GameManagerVm.SavedXPosition, StringFormat={}{0:F3}}" />
+                    </StackPanel>
 
-                            <Button Content="Load pos"
-                                    Command="{Binding Path=GameManagerVm.LoadSavedPositionCommand}"/>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="Y: " />
+                        <TextBlock Text="{Binding Path=GameManagerVm.SavedYPosition, StringFormat={}{0:F3}}" />
+                    </StackPanel>
 
-                        </StackPanel>
-
-                        <StackPanel Margin="10 0 0 0"
-                                    VerticalAlignment="Center">
-
-                            <StackPanel Orientation="Horizontal">
-                                <TextBlock Text="X: " />
-                                <TextBlock Text="{Binding Path=GameManagerVm.SavedXPosition, StringFormat={}{0:F3}}" />
-                            </StackPanel>
-
-                            <StackPanel Orientation="Horizontal">
-                                <TextBlock Text="Y: " />
-                                <TextBlock Text="{Binding Path=GameManagerVm.SavedYPosition, StringFormat={}{0:F3}}" />
-                            </StackPanel>
-
-                            <StackPanel Orientation="Horizontal">
-                                <TextBlock Text="Z: " />
-                                <TextBlock Text="{Binding Path=GameManagerVm.SavedZPosition, StringFormat={}{0:F3}}" />
-                            </StackPanel>
-
-                        </StackPanel>
-
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="Z: " />
+                        <TextBlock Text="{Binding Path=GameManagerVm.SavedZPosition, StringFormat={}{0:F3}}" />
                     </StackPanel>
 
                 </StackPanel>
 
+                <StackPanel Grid.Column="1"
+                            VerticalAlignment="Center">
+
+                    <Button Content="Save"
+                            Command="{Binding Path=GameManagerVm.SavePositionCommand}"
+                            Margin="0 0 0 3" />
+
+                    <Button Content="Load"
+                            Command="{Binding Path=GameManagerVm.LoadSavedPositionCommand}" />
+
+                </StackPanel>
+
             </Grid>
+        </GroupBox>
 
-            <GridSplitter Grid.Column="1"
-                          ResizeDirection="Columns"
-                          ResizeBehavior="PreviousAndNext"
-                          HorizontalAlignment="Stretch"
-                          VerticalAlignment="Stretch" />
+        <GridSplitter Grid.Column="1" Grid.Row="1" Grid.RowSpan="2"
+                      ResizeDirection="Columns"
+                      ResizeBehavior="PreviousAndNext"
+                      HorizontalAlignment="Stretch"
+                      VerticalAlignment="Stretch" />
 
-            <Grid x:Name="BookmarkPanel"
-                  Grid.Column="2"
-                  Margin="10">
+        <GroupBox Grid.Column="2" Grid.Row="1"
+                  Margin="5 0"
+                  Padding="3"
+                  Header="Bookmarks">
+            <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
                     <RowDefinition Height="*" />
-                    <RowDefinition Height="Auto"
-                                   SharedSizeGroup="Bottom" />
+                    <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
 
-                <TextBlock Grid.Row="0"
-                           Text="Bookmarks"
-                           HorizontalAlignment="Center"
-                           FontWeight="Bold"
-                           FontSize="14" />
-
-                <ListBox Grid.Row="1"
+                <ListBox Grid.Row="0"
                          ItemsSource="{Binding Path=BookmarksVm.BookmarkItems}"
                          SelectedIndex="{Binding Path=BookmarksVm.SelectedBookmarkIndex}"
                          dd:DragDrop.IsDragSource="true"
-                         dd:DragDrop.IsDropTarget="true"
-                         Margin="0 10">
+                         dd:DragDrop.IsDropTarget="true">
+
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding Path=Name}" />
                         </DataTemplate>
                     </ListBox.ItemTemplate>
+
                     <ListBox.ItemContainerStyle>
                         <Style TargetType="{x:Type ListBoxItem}">
                             <EventSetter Event="MouseDoubleClick" Handler="BookmarkListItemDoubleClick" />
                         </Style>
                     </ListBox.ItemContainerStyle>
+
                     <ListBox.InputBindings>
                         <KeyBinding Key="F2" Command="{Binding Path=BookmarksVm.RenameBookmarkCommand}" />
                         <KeyBinding Key="Delete" Command="{Binding Path=BookmarksVm.DeleteBookmarkCommand}" />
                         <KeyBinding Key="Back" Command="{Binding Path=BookmarksVm.DeleteBookmarkCommand}" />
                     </ListBox.InputBindings>
+
                 </ListBox>
 
-                <StackPanel Grid.Row="2">
-                    
-                    <WrapPanel Orientation="Horizontal">
+                <DockPanel Grid.Row="1">
 
-                        <Button Content="Load Bookmark"
-                                Margin="0 0 10 0"
+                    <WrapPanel Margin="0 5 0 -3">
+
+                        <Button Content="Load"
+                                Margin="0 0 3 3"
                                 Command="{Binding Path=BookmarksVm.LoadBookmarkCommand}"
-                                IsEnabled="{Binding Path=BookmarksVm.SelectedBookmarkIndex, Converter={local:IsValidIndexConverter}}"/>
-
-                        <Button Content="Add"
-                                Margin="0 0 10 0"
-                                HorizontalAlignment="Left"
-                                Command="{Binding Path=BookmarksVm.AddBookmarkCommand}" />
-
-                        <Button Content="Rename"
-                                Margin="0 0 10 0"
-                                Command="{Binding Path=BookmarksVm.RenameBookmarkCommand}"
-                                IsEnabled="{Binding Path=BookmarksVm.SelectedBookmarkIndex, Converter={local:IsValidIndexConverter}}"/>
-
-                        <Button Content="Delete"
-                                Margin="0 0 10 0"
-                                Command="{Binding Path=BookmarksVm.DeleteBookmarkCommand}" 
-                                IsEnabled="{Binding Path=BookmarksVm.SelectedBookmarkIndex, Converter={local:IsValidIndexConverter}}"/>
+                                IsEnabled="{Binding Path=BookmarksVm.SelectedBookmarkIndex, Converter={local:IsValidIndexConverter}}" />
 
                     </WrapPanel>
 
-                    <TextBlock Text="Current Level:"
-                               Margin="0 10 0 0"/>
+                    <WrapPanel HorizontalAlignment="Right"
+                               Margin="0 5 0 -3">
+
+                        <Button Content="Add"
+                                Margin="0 0 3 3"
+                                Command="{Binding Path=BookmarksVm.AddBookmarkCommand}" />
+
+                        <Button Content="Rename"
+                                Margin="0 0 3 3"
+                                Command="{Binding Path=BookmarksVm.RenameBookmarkCommand}"
+                                IsEnabled="{Binding Path=BookmarksVm.SelectedBookmarkIndex, Converter={local:IsValidIndexConverter}}" />
+
+                        <Button Content="Delete"
+                                Margin="0 0 0 3"
+                                Command="{Binding Path=BookmarksVm.DeleteBookmarkCommand}"
+                                IsEnabled="{Binding Path=BookmarksVm.SelectedBookmarkIndex, Converter={local:IsValidIndexConverter}}" />
+
+                    </WrapPanel>
+
+                </DockPanel>
+
+            </Grid>
+        </GroupBox>
+
+        <GroupBox Grid.Column="2" Grid.Row="2"
+                  Margin="5 0 5 5"
+                  Padding="8 3"
+                  Header="Current Level">
+            <Grid>
+
+                <StackPanel VerticalAlignment="Center">
 
                     <TextBlock Text="{Binding Path=BookmarksVm.CurrentLevelName}"
-                               Margin="0 3 0 0"
-                               TextWrapping="WrapWithOverflow"/>
+                               VerticalAlignment="Center"
+                               Margin="0 0 0 3"
+                               TextWrapping="WrapWithOverflow" />
+
+                    <TextBlock Text="{Binding Path=BookmarksVm.CurrentSectionName}"
+                               VerticalAlignment="Center"
+                               TextWrapping="WrapWithOverflow" />
 
                 </StackPanel>
 
             </Grid>
+        </GroupBox>
 
-        </Grid>
     </Grid>
+    
 </UserControl>
