Added Bonus Stage Added tooltips when hovering over a level to display the filename (full view only)

--- a/OpenSpaceToolbox/Views/GameManagerFullView.xaml
+++ b/OpenSpaceToolbox/Views/GameManagerFullView.xaml
@@ -80,7 +80,7 @@
 
                     <TreeView.ItemTemplate>
                         <HierarchicalDataTemplate ItemsSource="{Binding Levels, Mode=OneTime}">
-                            <TextBlock Text="{Binding Name, Mode=OneTime}"
+                            <TextBlock Text="{Binding Name, Mode=OneTime}" ToolTip="{Binding FileName, Mode=OneTime}"
                                        TextWrapping="WrapWithOverflow" />
                         </HierarchicalDataTemplate>
                     </TreeView.ItemTemplate>
