Fixed a bug where changes to the progress array textbox wouldn't be saved Fixed a bug where the progress array didn't capture a few items such as thinking ability, lums in woods of light

--- a/OpenSpaceToolbox/Windows/ProgressArrayWindow.xaml
+++ b/OpenSpaceToolbox/Windows/ProgressArrayWindow.xaml
@@ -25,7 +25,7 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition MinWidth="50" />
             </Grid.ColumnDefinitions>
-            <TextBox Text="{Binding Path=SavedProgressText}" TextWrapping="Wrap" MaxWidth="260" />
+            <TextBox Text="{Binding Path=EditProgressText}" TextWrapping="Wrap" MaxWidth="260" />
             <StackPanel Grid.Column="1"
                         Grid.Row="1">
                 <WrapPanel Orientation="Horizontal"
