Fixed teleports not working sometimes due to new camera reset function Added toggle for camera reset (on by default) (Rayman 2) Added option to set checkpoint from saved position instead of current position (Rayman 2) Added flag 1159 (Defeated Foutch) (Rayman 2) Added indicator for Rayman 2 that the toolbox has been used (resting sad face syndrome)

--- a/OpenSpaceToolbox/Views/GameManagerFullView.xaml
+++ b/OpenSpaceToolbox/Views/GameManagerFullView.xaml
@@ -42,18 +42,23 @@
                 
                 <MenuItem.ItemTemplate>
                     <HierarchicalDataTemplate DataType="{x:Type local:ExtraAction}">
-                        <TextBlock Text="{Binding Name}"></TextBlock>
+                        <TextBlock ToolTip="{Binding Tooltip}"  Text="{Binding Name}"></TextBlock>
                     </HierarchicalDataTemplate>
                 </MenuItem.ItemTemplate>
 
             </MenuItem>
 
-            <MenuItem Header="Settings">
+            <MenuItem Header="Settings" Click="MenuItem_Click">
                 
                 <MenuItem Header="Enable hotkeys"
                           IsCheckable="True"
                           IsChecked="{Binding Path=HotkeysEnabled}"
                           ToolTip="{Binding Path=HotkeysToggleTooltip}" />
+
+                <MenuItem Header="Enable camera reset"
+                          IsCheckable="True"
+                          IsChecked="{Binding Path=GameManager.CameraResetEnabled}"
+                          ToolTip="{Binding Path=CameraResetToggleTooltip}" />
                 
                 <MenuItem Header="Minimized UI"
                           Command="{Binding Path=ToggleMinimizedUiCommand}">
